--- a/package.json
+++ b/package.json
@@ -138,4 +138,7 @@
     "@typescript-eslint/utils": "^8.0.0-alpha.30"
   },
   "packageManager": "pnpm@9.4.0"
+   "scripts": {
+    "build": "pnpm install && pnpm run build"
+  }
 }
